--- a/report/refs.bib
+++ b/report/refs.bib
@@ -86,3 +86,21 @@
   year={2022},
   publisher={Elsevier}
 }
+
+@misc{biubug6_2020,
+  author       = {biubug6},
+  title        = {Pytorch\_Retinaface},
+  year         = {2020}, 
+  publisher    = {GitHub},
+  journal      = {GitHub repository},
+  howpublished = {\url{https://github.com/biubug6/Pytorch_Retinaface}},
+  commit       = {The specific commit you referenced, if applicable}
+}
+
+@inproceedings{yang2016wider,
+  title={Wider face: A face detection benchmark},
+  author={Yang, Shuo and Luo, Ping and Loy, Chen-Change and Tang, Xiaoou},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={5525--5533},
+  year={2016}
+}
