--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -245,12 +245,11 @@ In essence, RetinaFace stands as a significant advancement in face detection, co
 \section{STATEMENT OF ALL TOOLS USED}
 \label{sec:statementofalltoolsused}
 
-% In this work, we used Pytorch geometric package to generate data, create, train models. 
-% The Plotly package helped us visualize in 3D. 
+In this study, the primary tool employed is \texttt{PyTorch}.
 
-Source codes are published in github: 
-% $\href{}{URL}$
-
+The source code associated with this project has been published on GitHub for public access. 
+Interested readers can find the repository at the following link: \href{https://github.com/felixzhao/AIML425-Project}{GitHub Repository}. 
+For detailed code contributions, please refer to the \texttt{README} within the repository.
 
 
 
